# t3

./: CMakeLists.txt  README.md  test.dio
include/: board.h  square.h
src/: board.cpp  main.cpp  square.cpp
test/: board_test.cpp
